plugins {
    alias(libs.plugins.spring.boot) apply false
    alias(libs.plugins.spring.dep.mgmt) apply false
}

allprojects {
    group = 'com.afkir'
    version = '1.0-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(26)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.compilerArgs << '-parameters'
        options.compilerArgs << '--enable-preview'
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
        jvmArgs '--enable-preview'
    }

    tasks.withType(JavaExec).configureEach {
        jvmArgs '--enable-preview'
    }
}
